horizontal scroll fixed

--- a/app/assets/stylesheets/components/_text.scss
+++ b/app/assets/stylesheets/components/_text.scss
@@ -55,6 +55,7 @@ p {
 	font-size: 12px;
 	margin: 4px;
 	padding: 0px;
+	color: white;
 	font-family: 'Montserrat', sans-serif;
 	font-weight: 200;
 }
