--- a/app/assets/stylesheets/pages/_inspirations.scss
+++ b/app/assets/stylesheets/pages/_inspirations.scss
@@ -60,7 +60,6 @@
 	width: 80%;
 	position: relative;
 	padding-top: 322px;
-	z-index: 3;
 }
 
 .row-1-col-2-span-7-MIES {
